// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dealCards: player 0 1`] = `
[
  {
    "rank": "ten",
    "suit": "clubs",
  },
  {
    "rank": "ace",
    "suit": "clubs",
  },
  {
    "rank": "king",
    "suit": "clubs",
  },
  {
    "rank": "jack",
    "suit": "diamonds",
  },
  {
    "rank": "nine",
    "suit": "diamonds",
  },
  {
    "rank": "jack",
    "suit": "spades",
  },
  {
    "rank": "nine",
    "suit": "spades",
  },
  {
    "rank": "eight",
    "suit": "spades",
  },
]
`;

exports[`dealCards: player 1 1`] = `
[
  {
    "rank": "queen",
    "suit": "clubs",
  },
  {
    "rank": "jack",
    "suit": "clubs",
  },
  {
    "rank": "nine",
    "suit": "clubs",
  },
  {
    "rank": "eight",
    "suit": "diamonds",
  },
  {
    "rank": "seven",
    "suit": "diamonds",
  },
  {
    "rank": "seven",
    "suit": "spades",
  },
  {
    "rank": "ten",
    "suit": "hearts",
  },
  {
    "rank": "ace",
    "suit": "hearts",
  },
]
`;

exports[`dealCards: player 2 1`] = `
[
  {
    "rank": "eight",
    "suit": "clubs",
  },
  {
    "rank": "seven",
    "suit": "clubs",
  },
  {
    "rank": "ten",
    "suit": "diamonds",
  },
  {
    "rank": "ten",
    "suit": "spades",
  },
  {
    "rank": "ace",
    "suit": "spades",
  },
  {
    "rank": "king",
    "suit": "hearts",
  },
  {
    "rank": "queen",
    "suit": "hearts",
  },
  {
    "rank": "jack",
    "suit": "hearts",
  },
]
`;

exports[`dealCards: player 3 1`] = `
[
  {
    "rank": "ace",
    "suit": "diamonds",
  },
  {
    "rank": "king",
    "suit": "diamonds",
  },
  {
    "rank": "queen",
    "suit": "diamonds",
  },
  {
    "rank": "king",
    "suit": "spades",
  },
  {
    "rank": "queen",
    "suit": "spades",
  },
  {
    "rank": "nine",
    "suit": "hearts",
  },
  {
    "rank": "eight",
    "suit": "hearts",
  },
  {
    "rank": "seven",
    "suit": "hearts",
  },
]
`;
